# crab

./: .clang-format  .clang-tidy  .clangd  .gitignore  Add_8hpp_source.html  AnyOf_8hpp_source.html  Box_8hpp_source.html  CMakeLists.txt  CMakePresets.json  Dictionary_8hpp_source.html  Div_8hpp_source.html  Err_8hpp_source.html  Error_8hpp_source.html  From_8hpp_source.html  Func_8hpp_source.html  Handle_8hpp_source.html  LICENSE  Mul_8hpp_source.html  Ok_8hpp_source.html  Option_8hpp_source.html  README.md  Rc_8hpp_source.html  Rem_8hpp_source.html  Result_8hpp_source.html  Set_8hpp_source.html  SourceLocation_8hpp_source.html  Sub_8hpp_source.html  Tuple_8hpp_source.html  Vec_8hpp_source.html  address__of_8hpp_source.html  annotated.html  annotated_dup.js  ansi_8hpp_source.html  any_8hpp_source.html  assert_8hpp_source.html  assertion_2forward_8hpp_source.html  bool__types_8hpp_source.html  boolean__constructs_8hpp_source.html  boxed_2forward_8hpp_source.html  boxed_8hpp_source.html  (+350 more)
.cache/clangd/index/: box.hpp.8424428A3E91DC4C.idx  main.cpp.85A60BCEFC9BC363.idx  non_null.hpp.C1512BEE9D0505A5.idx  option.hpp.D5EDA2FEE04E8343.idx  preamble.hpp.1351F3B1A99334F8.idx  range.hpp.6D0A8EA48728ABDA.idx  ref.hpp.70CB5B9602A66636.idx
.github/workflows/: cmake-multi-platform.yml  upload-doxygen.yml
cmake/: crabConfig.cmake.in
docs/: CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml  README.md  _navbar.md  _sidebar.md  header.html  index.html  script.js  style.css  styling.css
docs/pages/: Installation.md  main.md
docs/pages/reference/: Option.md
docs/pages/reference/assert/: Check.md  Panic.md  README.md
docs/pages/reference/option/: Extraction.md  Formatting.md  Introduction.md  Monadic.md  Motivation.md  README.md
docs/static/: cpp_prism_grammer.js  docs.css  doxygen_header.html  doxygen_styling.css  footer.html  header.html  script.js  styling.css
inc/: box.hpp  preamble.hpp  ref.hpp
include/: box.hpp  crab_type_traits.hpp  debug.hpp  error.hpp  hash.hpp  option.hpp  pattern_match.hpp  preamble.hpp  range.hpp  rc.hpp  ref.hpp  result.hpp
include/crab/: all.hpp  box.hpp  casts.hpp  choice.hpp  config.hpp.in  core.hpp  crab.h  debug.hpp  error.hpp  fmt.hpp  fn.hpp  hash.hpp  mem.hpp  option.hpp  preamble.hpp  range.hpp  rc.hpp  ref.hpp  result.hpp  todo.hpp  type_traits.hpp  utf8.hpp
include/crab/any/: AnyOf.hpp  any.hpp  forward.hpp
include/crab/any/impl/: AnyOfStorage.hpp  Buffer.hpp  visitor.hpp
include/crab/assert/: assert.hpp  panic.hpp
include/crab/assertion/: assert.hpp  check.hpp  fmt.hpp  panic.hpp  todo.hpp
include/crab/boxed/: Box.hpp  boxed.hpp  forward.hpp
include/crab/boxed/impl/: BoxStorage.hpp
include/crab/choice/: choice.hpp
include/crab/cmp/: max.hpp  min.hpp
include/crab/collections/: Dictionary.hpp  Set.hpp  Tuple.hpp  Vec.hpp
include/crab/convert/: From.hpp
include/crab/core/: SourceLocation.hpp  cases.hpp  discard.hpp  unit.hpp  unreachable.hpp  unsafe.hpp
include/crab/env/: env.hpp  forward.hpp
include/crab/fn/: Func.hpp  cast.hpp  fn.hpp  identity.hpp
include/crab/hash/: hash.hpp
include/crab/mem/: address_of.hpp  copy.hpp  forward.hpp  mem.hpp  move.hpp  replace.hpp  size_of.hpp  swap.hpp  take.hpp
include/crab/mem/impl/: swap.hpp
include/crab/num/: floating.hpp  integer.hpp  num.hpp  range.hpp  suffixes.hpp
include/crab/ops/: Add.hpp  Div.hpp  Mul.hpp  Rem.hpp  Sub.hpp  ops.hpp
include/crab/opt/: Option.hpp  boolean_constructs.hpp  concepts.hpp  fallible.hpp  forward.hpp  none.hpp  opt.hpp  some.hpp
include/crab/opt/impl/: GenericStorage.hpp  RefStorage.hpp  fallible.hpp
include/crab/option/: boolean_constructs.hpp  fallible.hpp  none.hpp  option.hpp  some.hpp
include/crab/option/impl/: GenericStorage.hpp  RefStorage.hpp  fallible.hpp
include/crab/rc/: Rc.hpp
include/crab/rc/impl/: Counter.hpp  RcBase.hpp  RcStorage.hpp
include/crab/ref/: casts.hpp  forward.hpp  from_ptr.hpp  implicit_cast.hpp  is.hpp  is_exact.hpp  ref.hpp
include/crab/result/: Err.hpp  Error.hpp  Ok.hpp  Result.hpp  concepts.hpp  fallible.hpp  forward.hpp  unwrap.hpp
include/crab/result/impl/: fallible.hpp
include/crab/str/: str.hpp
include/crab/term/: Handle.hpp  ansi.hpp  forward.hpp  term.hpp
include/crab/term/impl/: handle_to_descriptor.hpp
include/crab/ty/: bool_types.hpp  classify.hpp  compare.hpp  construct.hpp  crab_ref_decay.hpp  functor.hpp  identity.hpp  manipulate.hpp  ty.hpp
nix/: crab.nix
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  concepts_0.js  concepts_1.js  concepts_2.js  concepts_3.js  concepts_4.js  concepts_5.js  (+57 more)
src/: debug.cpp  error.cpp  option.hpp  range.hpp  ref.hpp
test/: CMakeLists.txt  box.cpp  common_fn.hpp  fallible.cpp  fn.cpp  main.cpp  monadic.cpp  option.cpp  pattern.cpp  rc.cpp  ref.cpp  result.cpp  test_static_asserts.hpp  test_types.hpp
tests/: CMakeLists.txt  any_of.cpp  box.cpp  fallible.cpp  fn.cpp  mem.cpp  monadic.cpp  option.cpp  pattern.cpp  rc.cpp  rc_experimental.cpp  ref.cpp  result.cpp  test_static_asserts.hpp  test_types.hpp
